--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format:check": "prettier . --check"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
