--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
+    "mailgen": "^2.0.32",
     "mongoose": "^8.19.3"
   },
   "devDependencies": {
