--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mailgen": "^2.0.32",
-    "mongoose": "^8.19.3"
+    "mongoose": "^8.19.3",
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "prettier": "3.6.2"
